# fmgpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev_config.md  pyproject.toml  setup.cfg  trees_per_acre.py
QA_Tools/: FMG_QA_FunctionLibrary.py  FMG_ST_01_PrepQAWorkspace.py  FMG_ST_02_CheckPlotIDs.py  FMG_ST_03_CheckPrismFixedMatch.py  FMG_ST_04_VerifyAgePlots.py  FMG_ST_05_CheckFixedOffsets.py  FMG_ST_06_CheckRequiredFields.py  FunctionTesting.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/fmgpy/: FMG_ST_01_PrepQAWorkspace.py  FMG_ST_02_CheckPlotIDs.py  FMG_ST_03_CheckFixedOffsets.py  FMG_ST_03_CheckPrismFixedMatch.py  FMG_ST_04_VerifyAgePlots.py  FMG_ST_05_CheckFixedOffsets.py  FMG_ST_05_CheckPrismFixedMatch.py  FMG_ST_06_CheckRequiredFields.py  FMG_ST_06_CheckRequiredFields_Center.py  FMG_ST_07_CheckRequiredFields_Prism.py  FMG_ST_08_CheckRequiredFields_Fixed.py  FMG_ST_09_CheckRequiredFields_Age.py  FMG_ST_10_RemoveDuplicates.py  FMG_ST_CreatePlotLocations.py  FunctionTesting.py  __init__.py  bool_to_text.py  check_age_plots.py  check_contractor_age_plots.py  check_fixed_offsets.py  check_plot_id.py  check_prism_fixed.py  check_required_fields_age.py  check_required_fields_fixed.py  check_required_fields_prism.py
tests/: test_check_age_plots.py  test_check_plot_id.py  test_fmgpy.py
tests/data/Pool_17_20210930/: Age.dbf  Age.shp  Age.shx  Age.xml  Fixed.dbf  Fixed.shp  Fixed.shx  Fixed.xml  Prism.dbf  Prism.shp  Prism.shx  Prism.xml
tests/data/Pool_17_20210930/QA_Output.gdb/: a0000003c.gdbtable  a0000003c.gdbtablx
